# my-old-space

./: .gitignore  DATABASE_INITIALIZATION_SPEC.md  HOW_TO_CREATE_NEW_PROJECT.md  README.md  index.js  main_server.js  package.json  server.config.json
apps/UserSettings/: config.json  server.js
apps/calculator/: config.json
apps/cpp_app/: CMakeLists.txt  build.bat  build_wasm.bat  config.json  main.cpp  test.cpp
apps/cpp_app/resources/public/: CppApp.js  CppApp.wasm  TestApp.js  TestApp.wasm  client.js
apps/fileSystem/: agentManager.js  config.json  init.js  server.js
apps/fileSystem/db/: db.json
apps/login/: config.json  server.js
apps/main_menu/: config.json  server.js
apps/messenger/: config.json  init.js  server.js
apps/messenger/db/: db.json  defaultValues.json
apps/tetris/: config.json
apps/uniListForm/: config.json  init.js  server.js
apps/uniRecordForm/: config.json  init.js  server.js
drive_forms/: apps.json  dataApp.js  dynamicTableRegistry.js  eventBus.js  globalServerContext.js  init.js  server.js  server_config.json
drive_forms/db/: createDB.js  db.json  defaultValues.json
drive_forms/resources/public/: DynamicTable_temp.js  UI_classes — копия.js  UI_classes.js  client.js  client_config.json  index.html  style.css
drive_root/: dynamicTableRegistry.js  eventBus.js  globalServerContext.js  init.js  memory_store.js  memory_store_service.js  server.js
drive_root/db/: createDB.js  db.json  defaultValues.json  deleteDB.js  migrationUtils.js  sequelize_instance.js  sessionManager.js  utilites.js
scripts/: createApp.js
(+11 files in other folders)
